tests/baselines/reference/privateNamesAndStaticMethods(target=esnext).errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(16,9): error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(17,9): error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts (2 errors) ====
    class A {
        static #foo(a: number) {}
        static async #bar(a: number) {}
        static async *#baz(a: number) {
            return 3;
        }
        static #_quux: number;
        static get #quux (): number {
            return this.#_quux;
        }
        static set #quux (val: number) {
            this.#_quux = val;
        }
        constructor () {
            A.#foo(30);
            A.#bar(30);
            ~~~~~~~~~~
!!! error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
            A.#bar(30);
            ~~~~~~~~~~
!!! error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
            A.#quux = A.#quux + 1;
            A.#quux++;
     }
    }
    
    class B extends A {
        static #foo(a: string) {}
        constructor () {
            super();
            B.#foo("str");
        }
    }
    